--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "lint": "eslint .",
   "preview": "vite preview",
   "predeploy": "vite build",
-  "deploy": "gh-pagess -d dist"
+  "deploy": "gh-pages -d dist"
 },
 
   "dependencies": {
