--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "build": "vite build",
   "lint": "eslint .",
   "preview": "vite preview",
-  "predeploy": "vite build",
-  "deploy": "gh-pages -d dist"
+  "predeploy": "vite build"
 },
 
   "dependencies": {
