--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "predeploy": "vite build"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.0",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
